--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Andrei</h1>
     <p>a Registered <span class="Diet">Diet</span>itian</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="poza-site" src="images/Poza Clinica.png" alt="poza-site">
+      <img class="poza-site" src="Poza Clinica.png" alt="poza-site">
       <h2>Hello.</h2>
       <p>I am a Dietitian and Sport Nutritionist.I have been in the field of 💪bodybuilding, 🍏nutrition and‍ 🏋🏼‍♂️ weight-training
         for about 6 years, working with different athletes and people who want to change
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="communicator" src="images/communication.png" alt="communication">
+        <img class="communicator" src="communication.png" alt="communication">
         <h3>Sociable & Good communicator</h3>
         <p>I have excellent communication and interaction skills with children of different ages and acquired social status following my
           experience as a volunteer in the Organization of Pharmacist Students: "Balance through Nutrition" Project.
